[tool.poetry]
name = "empresasdomainapi"
version = "0.1.0"
description = "Domain API for the entity Empresa"
authors = ["Victor Belinello <victor@datadriva.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mypy = "^0.942"
pre-commit = "^2.18.1"
flake8-fastapi = "^0.6.1"
flake8-bugbear = "^22.6.22"
flake8-comprehensions = "^3.8.0"
flake8-simplify = "^0.19.2"
flake8-isort = "^4.1.1"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
dlint = "^0.12.0"
flake8-bandit = "^3.0.0"
requests = "^2.27.1"

[tool.pytest.ini_options]
pythonpath = [
  "./src"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
